--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: CryptoLib
 
 on: 
   push:
-    branches: [ main, dev, 291-apply-codeql-workflow-to-all-builds ]
+    branches: [ main, dev ]
   pull_request:
     branches: [ main, dev ]
 
