--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,17 +10,38 @@
 # supported CodeQL languages.
 #
 ---
-- name: "CodeQL Advanced"
-  hosts: localhost
-  tasks:
-  - analyze:
+name: "CodeQL Advanced"
+.dependency_template: &dependency_template
+  run: |
+    curl  \
+    -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
+    -o /tmp/libgpg-error-1.50.tar.bz2 \
+    && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ \
+    && cd /tmp/libgpg-error-1.50 \
+    && sudo ./configure \
+    && sudo make install \
+    && curl  \
+    -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 \
+    -o /tmp/libgcrypt-1.11.0.tar.bz2 \
+    && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ \
+    && cd /tmp/libgcrypt-1.11.0 \
+    && sudo ./configure \
+    && sudo make install \
+    && sudo ldconfig  
+    && 'eval $BUILD_STRING'
+
+  jobs:
+  - internal_build:
+      variables: 
+        BUILD_STRING: &BUILD_STRING
+
       name: Analyze (${{ matrix.language }})
       # Runner size impacts CodeQL analysis time. To learn more, please see:
       #   - https://gh.io/recommended-hardware-resources-for-running-codeql
       #   - https://gh.io/supported-runners-and-hardware-resources
       #   - https://gh.io/using-larger-runners (GitHub.com only)
       # Consider using larger runners or machines with greater resources for possible analysis time improvements.
-      runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+      runs-on: ubuntu-latest
       permissions:
         # required for all workflows
         security-events: write
@@ -73,21 +94,6 @@
       # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
       - if: matrix.build-mode == 'manual'
         shell: bash
-        run: |
-          curl  \
-          -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
-          -o /tmp/libgpg-error-1.50.tar.bz2 \
-          && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ \
-          && cd /tmp/libgpg-error-1.50 \
-          && sudo ./configure \
-          && sudo make install \
-          && curl  \
-          -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 \
-          -o /tmp/libgcrypt-1.11.0.tar.bz2 \
-          && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ \
-          && cd /tmp/libgcrypt-1.11.0 \
-          && sudo ./configure \
-          && sudo make install \
-          && sudo ldconfig 
+        <<: *dependency_template
   
   
