--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -11,8 +11,8 @@
 #
 ---
 name: "CodeQL Advanced"
-dependency_template: &dependency_template
-  run: |
+anchors: 
+  dependency_template: &dependency_template |
     curl  \
     -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
     -o /tmp/libgpg-error-1.50.tar.bz2 \
@@ -100,6 +100,6 @@ jobs:
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     - if: matrix.build-mode == 'manual'
       shell: bash
-      <<: *dependency_template
+      run: *dependency_template
   
   
