--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,9 +20,6 @@ on:
 
 jobs:
   internal_build:
-    variables: 
-      BUILD_STRING: bash ${GITHUB_WORKSPACE}/support/scripts/build_internal.sh
-
     name: Analyze (${{ matrix.language }})
     # Runner size impacts CodeQL analysis time. To learn more, please see:
     #   - https://gh.io/recommended-hardware-resources-for-running-codeql
@@ -40,6 +37,10 @@ jobs:
       # only required for workflows in private repositories
       actions: read
       contents: read
+
+    env: 
+      BUILD_STRING: bash ${GITHUB_WORKSPACE}/support/scripts/build_internal.sh
+
 
     strategy:
       fail-fast: false
