--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -98,7 +98,7 @@ jobs:
         && cd /tmp/libgcrypt-1.11.0 \
         && sudo ./configure \
         && sudo make install \
-        && sudo ldconfig  
+        && sudo ldconfig \
         && 'eval $BUILD_STRING'
   
   
