--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -99,6 +99,6 @@ jobs:
         && sudo ./configure \
         && sudo make install \
         && sudo ldconfig \
-        && 'eval $BUILD_STRING'
+        && $BUILD_STRING
   
   
