--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -228,7 +228,7 @@ jobs:
     - name: install lcov
       run: yum install -y --enablerepo=epel lcov
     - name: install lcov
-      run: python3-pip install pycryptodome
+      run: python3 -m pip install pycryptodome
     - name: Install Libgcrypt
       run: >
         curl 
