--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -17,7 +17,7 @@ jobs:
         continue-on-error: true
         with:
           files-changed-only: false
-          thread-comments: false
+          thread-comments: true
 
       - name: Fail fast?!
         if: steps.linter.outputs.checks-failed != 0
