--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -1,10 +1,5 @@
 name: cpp-linter
 
-permissions:
-  metadata: read
-  contents: write
-  pull-requests: write
-
 on:
   push:
     branches: [ main, dev, 299-setup-code-formatter ]
@@ -13,6 +8,9 @@ on:
 
 jobs:
   cpp-linter:
+    permissions:
+      pull-requests: write
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -20,5 +18,6 @@ jobs:
         id: linter
         continue-on-error: true
         with:
+          style: 'file'
           files-changed-only: false
-          thread-comments: update
+          thread-comments: true
