--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -1,8 +1,6 @@
 name: cpp-linter
 
 on:
-  push:
-    branches: [ main, dev, 299-setup-code-formatter ]
   pull_request:
     branches: [ main, dev ]
 
@@ -18,7 +16,7 @@ jobs:
         id: linter
         continue-on-error: true
         with:
-          style: './.clang-format'
+          style: 'file'
           files-changed-only: false
           thread-comments: true
-          format-review: true
+          tidy-review: true
