--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -57,6 +57,10 @@ add_test(NAME UT_TM_PROCESS
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_tm_process 
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
+add_test(NAME UT_EP_SA_MGMT
+         COMMAND ${PROJECT_BINARY_DIR}/bin/ut_ep_sa_mgmt 
+         WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+
 if(NOT ${CRYPTO_WOLFSSL})
     add_test(NAME UT_AES_GCM_SIV
             COMMAND ${PROJECT_BINARY_DIR}/bin/ut_aes_gcm_siv
