--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Update
-      run: sudo apt-get update
+      run: apt-get update
     - name: Install Dependencies
-      run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3
+      run: apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3
     - name: Install Python Libraries
       run: pip install pycryptodome
     - name: Install Libgcrypt
@@ -28,16 +28,16 @@ jobs:
         -o /tmp/libgpg-error-1.50.tar.bz2 
         && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ 
         && cd /tmp/libgpg-error-1.50 
-        && sudo ./configure 
-        && sudo make install 
+        && ./configure 
+        && make install 
         && curl  
         -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 
         -o /tmp/libgcrypt-1.11.0.tar.bz2 
         && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ 
         && cd /tmp/libgcrypt-1.11.0 
-        && sudo ./configure 
-        && sudo make install
-        && sudo ldconfig
+        && ./configure 
+        && make install
+        && ldconfig
     # End Container Setup
     
     - name: Minimal Build Script
