--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,7 @@ name: "CodeQL Advanced"
 
 on:
   push: 
-    branches: [ dev ]
+    branches: [ dev, 334-resolve-codeql-ci-failures ]
   pull_request:
     branches: [ main, dev ]
 
@@ -29,7 +29,7 @@ jobs:
       packages: read
 
       # only required for workflows in private repositories
-      actions: read
+      actions: write
       contents: read
 
     env: 
