--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -3,6 +3,7 @@ name: cpp-linter
 on:
   push:
     branches: [ 299-setup-code-formatter ]
+    paths: [ '**.c', '**.h' ]
   pull_request:
     branches: [ main, dev ]
 
@@ -17,9 +18,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: cpp-linter/cpp-linter-action@v2
         id: linter
-        continue-on-error: true
         with:
-          style: 'llvm'
+          style: ''
+          tidy-checks: ''
           files-changed-only: false
-          file-annotations: true
-          thread-comments: true
+          verbosity: 'debug'
+          step-summary: 'true'
+          no-lgtm: 'false'
+          passive-reviews: 'true'
