--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -93,20 +93,27 @@ jobs:
         echo "Setting up environment for MC/DC Checker..."
         export PATH=/usr/lib/llvm-19/bin:$HOME/.local/bin:$PATH
         export LD_LIBRARY_PATH=/usr/lib/llvm-19/lib:$LD_LIBRARY_PATH
+        export CC=/usr/lib/llvm-19/bin/clang
+        export CXX=/usr/lib/llvm-19/bin/clang++
         
-        echo "Configuring Clang library path for MC/DC Checker..."
+        echo "Verifying Clang bindings..."
         python3 -c "
         import clang.cindex as cindex
         cindex.Config.set_library_file('/usr/lib/llvm-19/lib/libclang.so')
         print('Clang library file configured:', cindex.Config.library_path)
         "
-        
+    
+        echo "Testing Clang version in checker environment..."
+        clang --version || { echo 'Clang not found'; exit 1; }
+    
         echo "Running mcdc-checker..."
         mcdc-checker -a -j $GITHUB_WORKSPACE/doc/coverage/mcdc_report.json \
           -I $GITHUB_WORKSPACE/include $(find $GITHUB_WORKSPACE/src -type f -name '*.c' | tr '\n' ' ') \
           > $GITHUB_WORKSPACE/doc/coverage/mcdc_checker_output.log 2>&1 || true
     
-        echo "MC/DC Checker completed."
+        echo "Displaying MC/DC Checker Output:"
+        cat $GITHUB_WORKSPACE/doc/coverage/mcdc_checker_output.log
+
 
     - name: Display MC/DC Checker Output
       run: |
